--- a/q2/www/Departments/Courses/calculus.html
+++ b/q2/www/Departments/Courses/calculus.html
@@ -21,8 +21,8 @@
     mauris. In laoreet magna nisl, a cursus metus volutpat eget. Praesent at venenatis tellus. Fusce eget orci quam. Ut varius elit quis eros cursus, at laoreet dolor condimentum. Duis a feugiat dolor. Suspendisse eget quam nunc. Duis eros felis,
     tempor sit amet placerat vel, varius et enim. Suspendisse interdum ligula efficitur nisi sollicitudin commodo. Nam dolor felis, semper eu rutrum in, interdum nec purus.</p>
   <h3>About Professor Isaac Newton</h3>
-  <p>Sir Isaac Newton PRS (25 December 1642 – 20 March 1726/27) was an English mathematician, physicist, astronomer, theologian, and author (described in his own day as a "natural philosopher") who is widely recognised as one of the most
-    influential scientists of all time, and a key figure in the scientific revolution. His book Philosophiæ Naturalis Principia Mathematica (Mathematical Principles of Natural Philosophy), first published in 1687, laid the foundations of classical
+  <p>Sir Isaac Newton was an English mathematician, physicist, astronomer, theologian, and author who is widely recognised as one of the most
+    influential scientists of all time, and a key figure in the scientific revolution. His book Philosophiæ Naturalis Principia Mathematica, first published in 1687, laid the foundations of classical
     mechanics. Newton also made seminal contributions to optics, and shares credit with Gottfried Wilhelm Leibniz for developing the infinitesimal calculus.</p>
 </body>
 
