--- a/q2/www/Departments/Courses/machine_learning.html
+++ b/q2/www/Departments/Courses/machine_learning.html
@@ -19,7 +19,7 @@
     mauris. In laoreet magna nisl, a cursus metus volutpat eget. Praesent at venenatis tellus. Fusce eget orci quam. Ut varius elit quis eros cursus, at laoreet dolor condimentum. Duis a feugiat dolor. Suspendisse eget quam nunc. Duis eros felis,
     tempor sit amet placerat vel, varius et enim. Suspendisse interdum ligula efficitur nisi sollicitudin commodo. Nam dolor felis, semper eu rutrum in, interdum nec purus.</p>
     <h3>About Professor Ada Lovelace</h3>
-    <p>Augusta Ada King, Countess of Lovelace (née Byron; 10 December 1815 – 27 November 1852) was an English mathematician and writer, chiefly known for her work on Charles Babbage's proposed mechanical general-purpose computer, the Analytical
+    <p>Augusta Ada King, Countess of Lovelace was an English mathematician and writer, mainly known for her work on Charles Babbage's proposed mechanical general-purpose computer, the Analytical
       Engine. She was the first to recognise that the machine had applications beyond pure calculation, and published the first algorithm intended to be carried out by such a machine. As a result, she is sometimes regarded as the first to recognise
       the full potential of a "computing machine" and one of the first computer programmers.</p>
 </body>
