--- a/q2/www/index.html
+++ b/q2/www/index.html
@@ -4,21 +4,21 @@
 <head>
   <meta charset="utf-8">
   <title>Departments Index</title>
-  <link rel="shortcut icon" type="image/png" href="../img/favicon.png"/>
-
+  <link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
+  <link href="css/StyleSheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-  <h1 style="border:7px solid #d24a88;background-color:	#734576;color:#fb9bcb;font-family:Courier">Web Design University</h1>
-  <nav style="border:3px solid #734576">
+  <h1>Web Design University</h1>
+  <nav>
     <b>
       <a href="index.html">Home</a> &nbsp;
-      </nav>
+  </nav>
   <br>
-  <h2 style="font-family:courier;border:7px solid 	#734576;background-color: #fb9bcb">Departments</h2>
+  <h2>Departments</h2>
   <ul>
-    <li><a href="Departments/Computer_Science.html">Computer Science</a></li>
-    <li><a href="Departments/math_index.html">Mathematics</a></li>
+    <li><a href="cs/index.html">Computer Science</a></li>
+    <li><a href="math/index.html">Mathematics</a></li>
   </ul>
 </body>
 
