--- a/q2/www/index.html
+++ b/q2/www/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Departments Index</title>
-  <link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link href="css/StyleSheet.css" rel="stylesheet" type="text/css">
 </head>
 
